# FOC_2026

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  README.md  Start-MAVE-Workshop.cmd  Start-MAVE-Workshop.command  tasks.md  ur-ros2.compose.yml  workshop.compose.yml
docs/: AGENTS.md  README.md  (+16 more)
server/: .env.example  agent_model_factory.py  agent_processor_factory.py  bot.py  claude_agent_processor.py  codex_auth.py  codex_backend_client.py  codex_langchain_auth.py  codex_streaming_model.py  config.py  langchain_agent_processor.py  langgraph_robot_agent.py  metrics.py  openai_codex_agent_processor.py  pipeline_builder.py  prompts.py  providers.py  pyproject.toml  robot_mcp_bridge.py  runtime_profiles.toml  wake_tuning_settings.json
server/agent_control/: __init__.py  factory.py  gemini_ref.md  langchain_agent_processor.py  langgraph_robot_agent.py  model_factory.py  prompts.py  robot_job_submission.py  status_replies.py
server/agent_control/prompt_parts/: behavior_examples.md  examples.md  goal.md  mave_embodiment.md  reasoning_agent_persona.md  robot_contract.md  speech_delivery_style.md  speech_tag_examples.md
server/embodiment/: __init__.py  animations.py
server/evidence/: common_model_rrtconnect_pullout_results.json  common_model_vertical_cartesian_pick_results.json  voice_robot_fix_proof.html
server/model_eval/: __main__.py  adapters.py  candidates.py  config.py  evidence.py  runner.py  simulated_moveit.py  validators.py
server/models/: mave.onnx
server/moveit_mcp/: __init__.py  __main__.py  gripper.py  models.py  pick.py  place.py  scene.py  server.py  tools.py  vizor_client.py
server/operator_dashboard/: __init__.py  __main__.py  app.py  config.py  default_config.toml  health.py  models.py  security.py  service_manager.py  workshop_compose.py
server/process_trace/: __init__.py  context.py  jsonl.py  pipecat_observer.py  records.py  trace.py
server/robot_control/: __init__.py  call_validation.py  context.py  execution_intent.py  job_board.py  job_monitor.py  job_worker.py  langchain_tools.py  manipulation_plans.py  mcp_bridge.py  task_policy.py  verified_execution_client.py
server/test_support/: live_robot_smoke.py
server/tests/: conftest.py  test_agent_model_factory.py  test_agent_processor_factory.py  test_codex_auth.py  test_codex_backend_client.py  test_codex_langchain_auth.py  test_codex_oauth_live.py  test_codex_streaming_model.py  test_config.py  test_dynamic_role_update.py  test_embodiment_agent_tools.py  test_embodiment_animations.py  test_emergency_stop.py  test_execution_intent.py  test_gemini_live_speech.py  test_geometry_world_context.py  test_langchain_agent_processor.py  test_langgraph_robot_agent.py  test_langgraph_robot_agent_e2e.py  test_live_robot_smoke_support.py  test_manipulation_plans.py  test_metrics.py  test_model_eval_cli.py  test_model_eval_evidence.py  test_model_eval_runner.py  test_model_eval_scenarios.py  test_model_eval_scoring.py  test_model_eval_simulated_moveit.py  test_modeltracker_sync.py  test_modeltracker_sync_server.py  test_moveit_agent_behavior_contracts.py  test_moveit_mcp_agent_contract.py  test_moveit_mcp_execution_tools.py  test_moveit_mcp_gripper_tools.py  test_moveit_mcp_models.py  test_moveit_mcp_planning_tools.py  test_moveit_mcp_server.py  test_openai_codex_agent_processor.py  test_operator_dashboard_app.py  test_operator_dashboard_config.py  (+57 more)
server/user_sensing/: __init__.py  context.py  mcp_bridge.py
server/verified_execution_server/: __init__.py  __main__.py  models.py  plan_cache.py  robotiq_client.py  server.py  ur_executor.py
server/vizor_mcp/: __init__.py  __main__.py  attention.py  ros_client.py  server.py  tools.py  transforms.py
server/voice_modulation/: __init__.py  app.py  dsp.py  gemini_voices.py  persona_editor.py  preview.py  processor.py  profile_editor.py  settings.py  stream_trace.py
server/voice_runtime/: __init__.py  agent_providers.py  agent_turn.py  assembly.py  contracts.py  gemini_live_audio.py  gemini_live_speech.py  profiles.py  providers.py  response_coordination.py  robot_context.py  robot_safety.py  rtvi.py  timing.py  voice_metrics.py  wake_command.py  wake_tone.py
server/wake/: __init__.py  emergency_stop.py  openwakeword_detector.py  transcript_cleanup.py  wake_gate.py
server/wake_tuning/: __init__.py  app.py  detector.py  log_paths.py  settings.py
(+186 files in other folders)
