[project]
name = "pipecat-agent"
version = "0.1.0"
description = "Voice-controlled UR robot agent"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pipecat-ai[cartesia,deepgram,google,kokoro,openai,runner,silero,webrtc,whisper]",
    "openai>=2.29.0,<3",
    "mcp>=1.26.0,<2",
    "langgraph>=1.0,<2",
    "httpx>=0.28.0,<1",
    "openwakeword>=0.6.0,<1",
    "silero-vad>=6.0.0,<7",
    "tomli>=2.0.0; python_version < '3.11'",
    "langchain-core>=1.2,<2",
    "langchain-openai>=1.1,<2",
    "langchain-google-genai>=4.0,<5",
    "langchain-anthropic>=1.2,<2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.24.0,<1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["I"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "live: manual tests that require live credentials or external services",
    "llm: manual tests that call real API-backed chat models",
    "native_llm: manual tests that call real API-key LangChain providers",
    "robot_sim: manual tests that require the MoveIt robot simulation stack",
]
