[project]
name = "pipecat-agent"
version = "0.1.0"
description = "Voice-controlled UR robot agent"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pipecat-ai[cartesia,deepgram,google,kokoro,openai,runner,silero,webrtc,whisper]",
    "openai>=2.29.0,<3",
    "mcp>=1.26.0,<2",
    "langgraph>=1.0,<2",
    "httpx>=0.28.0,<1",
    "openwakeword>=0.6.0,<1",
    "silero-vad>=6.0.0,<7",
    "tomli>=2.0.0; python_version < '3.11'",
    "langchain-core>=1.2,<2",
    "langchain-openai>=1.1,<2",
    "langchain-google-genai>=4.0,<5",
    "langchain-anthropic>=1.2,<2",
    "tomlkit>=0.13,<1",
    "fastapi>=0.115.0,<1",
    "uvicorn>=0.32.0,<1",
    "psutil>=6.0.0,<8",
    "roslibpy>=0.3.0,<2",
    "ur-rtde>=1.6.2,<2",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.24.0,<1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["I"]

[tool.pyright]
exclude = [
    ".venv",
    ".pytest_cache",
    "**/__pycache__",
    "tests/test_moveit_mcp_agent_contract.py",
    "tests/test_moveit_mcp_planning_tools.py",
    "tests/test_moveit_mcp_server.py",
    "tests/test_operator_dashboard_app.py",
    "tests/test_operator_dashboard_launcher.py",
    "tests/test_operator_dashboard_service_manager.py",
    "tests/test_verified_execution_server.py",
    "tests/test_vizor_client.py",
    "tests/test_vizor_mcp_context.py",
    "tests/test_vizor_mcp_launcher.py",
    "tests/test_vizor_rviz_robotiq_patch.py",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "live: manual tests that require live credentials or external services",
    "llm: manual tests that call real API-backed chat models",
    "native_llm: manual tests that call real API-key LangChain providers",
    "robot_sim: manual tests that require the MoveIt robot simulation stack",
    "integration: manual tests that require running local integration services",
]
